# netcut_binary_aarch4

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.c  main.rs  main2.rs  main3
