[package]
name = "netcut_project"
version = "0.2.0"
edition = "2021"

[dependencies]
libc = "0.2"
ctrlc = "3.4"
pnet_datalink = "0.34"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true